[package]
name = "tlsn-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for TLS Notary - create verifiable proofs of web requests"

[[bin]]
name = "tlsn-cli"
path = "src/main.rs"

[dependencies]
# TLSNotary (from git - adjust branch/tag as needed)
tlsn = { git = "https://github.com/tlsnotary/tlsn", branch = "main", features = ["mozilla-certs"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", branch = "main", features = ["mozilla-certs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# HTTP
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }

# Utils
anyhow = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
